fix(nvim,i3): nvim-notify annoying popup, i3 new keymaps for scripts

--- a/dot_config/i3/config.d/keymaps.conf
+++ b/dot_config/i3/config.d/keymaps.conf
@@ -34,6 +34,9 @@ set $volume_up $(pactl set-sink-volume @DEFAULT_SINK@ +2% && $sink_volume)
     bindsym Print exec --no-startup-id flameshot gui
     bindsym $mod+Control+l exec --no-startup-id i3lock -f -p default -e -i ~/wallpapers/wallhaven-ex7l5w_1920x1080.png
     bindsym XF86Calculator exec discord
+
+    # toggle polybar
+    bindsym $mod+p exec polybar-msg cmd toggle
 #
 # workspace and window mappings
 #
@@ -132,6 +135,12 @@ set $volume_up $(pactl set-sink-volume @DEFAULT_SINK@ +2% && $sink_volume)
 
     # window menu
     bindsym $mod+t exec rofi -show window -config ~/.config/rofi/rofidmenu.rasi
+
+    # emails
+    bindsym $mod+e exec ~/.local/bin/scripts/email-rofi.sh
+
+    # frequent clipboard
+    bindsym $mod+s exec ~/.local/bin/scripts/frequently-used-rofi.sh
 #
 # volume control
 #
