--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,9 +1,14 @@
-set-option -g mouse on
+set -g mouse on
+set -g history-limit 5000
+set -g display-time 2000
 
-set-option -g history-limit 5000
+set -g default-terminal "screen-256color"
+set-window-option -g automatic-rename on
+set-option -g set-titles on
 
 # Enable vi mode for copy mode
-setw -g mode-keys vi
+set-window-option -g status-keys vi
+set-window-option -g mode-keys vi
 
 # Set window index to start from 1
 set-option -g base-index 1
