--- a/dot_config/alacritty/alacritty.yml
+++ b/dot_config/alacritty/alacritty.yml
@@ -125,19 +125,19 @@ scrolling:
 # Font configuration
 font:
   normal:
-    family: Fira Code Nerd Font
+    family: "FiraCode Nerd Font"
     style: Regular
 
-  bold:
-    family: Fira Code Nerd Font
-    style: Bold
-
   italic:
-    family: Fira Code Nerd Font
+    family: "FiraCode Nerd Font"
     style: Italic
 
+  bold:
+    family: "FiraCode Nerd Font"
+    style: Bold
+
   bold_italic:
-    family: Fira Code Nerd Font
+    family: "FiraCode Nerd Font"
     style: Bold Italic
 
   size: 9
