--- a/dot_config/polybar/config.ini
+++ b/dot_config/polybar/config.ini
@@ -26,7 +26,7 @@ separator = |
 separator-foreground = ${colors.separator}
 
 modules-left = i3
-modules-center = filesystem temperature memory cpu backlight battery date pulseaudio
+modules-center = filesystem temperature memory cpu backlight battery date pulseaudio cms
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -167,3 +167,8 @@ label-visible-padding = 1
 label-urgent = 󰺁 %name%
 label-urgent-foreground = ${colors.urgent}
 label-urgent-padding = 1
+
+[module/cms]
+type = custom/script
+exec = ~/.local/bin/scripts/cms.sh
+interval = 900
