--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -9,6 +9,7 @@ set-option -g set-titles on
 # Enable vi mode for copy mode
 set-window-option -g status-keys vi
 set-window-option -g mode-keys vi
+set-option -g detach-on-destroy off
 
 # Set window index to start from 1
 set-option -g base-index 1
@@ -27,3 +28,4 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 bind-key & kill-window
+bind-key z switch-client -l
