--- a/dot_config/i3/config.d/keymaps.conf
+++ b/dot_config/i3/config.d/keymaps.conf
@@ -27,7 +27,10 @@ set $volume_up $(pactl set-sink-volume @DEFAULT_SINK@ +2% && $sink_volume)
 # applications
 #
     # xmodmap -pke for key names
-    bindsym $mod+Return exec kitty --single-instance
+    bindsym $mod+Return exec alacritty
+    # if you want to exec tmux along with alacritty
+    # bindsym $mod+Return exec alacritty -e tmux
+
     bindsym $mod+w exec microsoft-edge-stable
     bindsym $mod+n exec thunar
     bindsym $mod+comma exec joplin-desktop
