--- a/dot_config/i3/config.d/autostart.conf
+++ b/dot_config/i3/config.d/autostart.conf
@@ -1,10 +1,10 @@
-exec discord --start-minimized
+# exec discord --start-minimized
 exec joplin-desktop
-exec qbittorrent
+# exec qbittorrent
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # wallpaper
-exec_always --no-startup-id feh --no-fehbg --bg-fill ~/wallpapers/wallhaven-x6638v_1920x1080.png
+exec_always --no-startup-id feh --no-fehbg --bg-fill --randomize ~/wallpapers
 
 # autotiling script
 exec_always --no-startup-id autotiling
