--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -2,7 +2,6 @@ set -g mouse on
 set -g history-limit 5000
 set -g display-time 2000
 
-set -g default-terminal "screen-256color"
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
@@ -20,6 +19,7 @@ set-option -g set-titles on
 # Enable automatic window renaming
 set-window-option -g automatic-rename on
 
+# set -g default-terminal "screen-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
 # Customize key bindings
