--- a/dot_config/polybar/config.ini
+++ b/dot_config/polybar/config.ini
@@ -31,7 +31,7 @@ modules-center = filesystem temperature memory cpu backlight battery date pulsea
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-font-0 = "Fira Code Nerd Font:size=13.4;2"
+font-0 = "VictorMono Nerd Font:size=13.4;2"
 
 tray-position = right
 tray-background = ${colors.background}
