--- a/dot_config/alacritty/alacritty.yml
+++ b/dot_config/alacritty/alacritty.yml
@@ -69,7 +69,7 @@ window:
   #
   # Window opacity as a floating point number from `0.0` to `1.0`.
   # The value `0.0` is completely transparent and `1.0` is opaque.
-  opacity: 0.94
+  opacity: 0.9
 
   # Startup Mode (changes require restart)
   #
@@ -125,19 +125,19 @@ scrolling:
 # Font configuration
 font:
   normal:
-    family: "FiraCode Nerd Font"
+    family: "VictorMono Nerd Font"
     style: Regular
 
   italic:
-    family: "FiraCode Nerd Font"
+    family: "VictorMono Nerd Font"
     style: Italic
 
   bold:
-    family: "FiraCode Nerd Font"
+    family: "VictorMono Nerd Font"
     style: Bold
 
   bold_italic:
-    family: "FiraCode Nerd Font"
+    family: "VictorMono Nerd Font"
     style: Bold Italic
 
   size: 9
