--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -29,3 +29,4 @@ bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 bind-key & kill-window
 bind-key z switch-client -l
+bind -n C-k send-keys -R \; clear-history
