--- a/dot_config/i3/config.d/autostart.conf
+++ b/dot_config/i3/config.d/autostart.conf
@@ -4,7 +4,7 @@ exec joplin-desktop
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # wallpaper
-exec_always --no-startup-id feh --no-fehbg --bg-fill --randomize ~/wallpapers
+exec_always --no-startup-id feh --no-fehbg --bg-fill ~/wallpapers/wallhaven-x6638v_1920x1080.png
 
 # autotiling script
 exec_always --no-startup-id autotiling
