--- a/dot_config/i3/config.d/application_defaults.conf
+++ b/dot_config/i3/config.d/application_defaults.conf
@@ -1,12 +1,18 @@
 # Assign windows specific workspaces
+assign [class="Joplin"] 1
+for_window [class="Joplin"] focus
+
+assign [class="Alacritty"] 1
+for_window [class="Alacritty"] focus
+
 assign [class="Microsoft-edge"] 2
 for_window [class="Microsoft-edge"] focus
 
 assign [class="Thunar"] 3
 for_window [class="Thunar"] focus
 
-for_window [class="Code"] focus
 assign [class="Code"] 1
+for_window [class="Code"] focus
 
 assign [class="discord"] 4
 
