--- a/dot_config/polybar/config.ini
+++ b/dot_config/polybar/config.ini
@@ -31,7 +31,7 @@ modules-center = filesystem temperature memory cpu backlight battery date pulsea
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-font-0 = "VictorMono Nerd Font:size=13.4;2"
+font-0 = "JetBrainsMono Nerd Font:size=13.4;2"
 
 tray-position = right
 tray-background = ${colors.background}
@@ -130,8 +130,8 @@ format-warn-foreground = #f00
 [module/date]
 type = internal/date
 
-date-alt = %H:%M:%S %d-%m %a
-date = %H:%M %a
+date = %H:%M:%S %d-%m %a
+date-alt = %H:%M %a
 format-prefix-foreground = ${colors.overlay}
 format-prefix = "  "
 label = %{A2:kitty --hold cal:}%{A3:microsoft-edge-stable "https\://calendar.google.com/calendar/u/1/r":}%date%%{A}%{A}
