Update .config/i3/config.d/autostart.conf Update .config/i3/config.d/theme.conf

--- a/dot_config/i3/config.d/autostart.conf
+++ b/dot_config/i3/config.d/autostart.conf
@@ -1,6 +1,6 @@
-# exec discord --start-minimized
+exec discord --start-minimized
 exec joplin-desktop
-# exec qbittorrent
+exec qbittorrent
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # wallpaper
@@ -32,3 +32,6 @@ exec_always --no-startup-id picom -b --experimental-backends
 # use xautolock to use autosuspend rules for mobile devices
 # https://wiki.archlinux.org/title/Session_lock#xautolock
 # exec --no-startup-id xautolock -time 60 -locker "systemctl suspend"
+
+# autotiling script
+exec_always --no-startup-id kdeconnect-indicator
