--- a/dot_config/i3/config.d/theme.conf
+++ b/dot_config/i3/config.d/theme.conf
@@ -1,5 +1,5 @@
 # set default font
-font pango:Fira Code Nerd Font 12
+font pango:JetBrainsMono Nerd Font 12
 
 # set inner/outer gaps
 gaps inner 7
