--- a/dot_config/alacritty/alacritty.yml
+++ b/dot_config/alacritty/alacritty.yml
@@ -420,12 +420,10 @@ selection:
 # Default:
 #   - (Linux/BSD/macOS) `$SHELL` or the user's login shell, if `$SHELL` is unset
 #   - (Windows) powershell
-shell:
-  program: /bin/bash
-  args:
-    - --login
-    - -c
-    - "tmux at || tmux"
+#shell:
+#  program: /bin/bash
+#  args:
+#    - --login
 
 # Startup directory
 #
