--- a/dot_config/i3/config.d/application_defaults.conf
+++ b/dot_config/i3/config.d/application_defaults.conf
@@ -1,6 +1,6 @@
 # Assign windows specific workspaces
-assign [class="Joplin"] 1
-for_window [class="Joplin"] focus
+assign [class="obsidian"] 1
+for_window [class="obsidian"] focus
 
 assign [class="Alacritty"] 1
 for_window [class="Alacritty"] focus
