--- a/dot_config/i3/config.d/keymaps.conf
+++ b/dot_config/i3/config.d/keymaps.conf
@@ -27,13 +27,12 @@ set $volume_up $(pactl set-sink-volume @DEFAULT_SINK@ +2% && $sink_volume)
 # applications
 #
     # xmodmap -pke for key names
-    bindsym $mod+Return exec alacritty
+    bindsym $mod+Return exec alacritty -e bash -c "tmux new-session ~/.local/bin/scripts/tmux-sessionizer.sh"
     # if you want to exec tmux along with alacritty
     # bindsym $mod+Return exec alacritty -e tmux
 
     bindsym $mod+w exec microsoft-edge-stable
     bindsym $mod+n exec thunar
-    bindsym $mod+comma exec joplin-desktop
     bindsym Print exec --no-startup-id flameshot gui
     bindsym $mod+Control+l exec --no-startup-id i3lock -f -p default -e -i ~/wallpapers/wallhaven-ex7l5w_1920x1080.png
     bindsym XF86Calculator exec discord
