--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,36 +1,13 @@
+set -g mouse on
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-set -g mouse on
-set -g display-time 2000
-
-set-window-option -g automatic-rename on
-set-option -g set-titles on
-
-# Enable vi mode for copy mode
-set-window-option -g status-keys vi
-set-window-option -g mode-keys vi
-set-option -g detach-on-destroy off
-
-# Set window index to start from 1
-set-option -g base-index 1
-
-# Set window title format
-set-option -g set-titles on
-
-# Enable automatic window renaming
+# # Enable automatic window renaming
 set-window-option -g automatic-rename on
 
-# set -g default-terminal "screen-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
-
-# Customize key bindings
+# # Customize key bindings
 bind-key R source-file ~/.config/tmux/tmux.conf \; display-message "Tmux configuration reloaded"
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
-bind-key & kill-window
-# bind-key z switch-client -l
 bind -n C-k send-keys -R \; clear-history
 
 run '~/.config/tmux/plugins/tpm/tpm'
