--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -4,11 +4,11 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'rose-pine/tmux'
 
-# # Enable automatic window renaming
+# Enable automatic window renaming
 set-window-option -g automatic-rename on
 set -g @rose_pine_variant 'moon'
 
-set -g @rose_pine_date_time '%d-%m-%Y' # It accepts the date UNIX command format (man date for info)
+set -g @rose_pine_date_time '%d-%m-%Y'
 
 # # Customize key bindings
 bind-key R source-file ~/.config/tmux/tmux.conf \; display-message "tmux configuration reloaded"
