--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -2,16 +2,16 @@ set -g mouse on
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'rose-pine/tmux'
 
-# Enable automatic window renaming
+set-option -g detach-on-destroy off
+set-option -g base-index 1
+set-option -g set-titles on
 set-window-option -g automatic-rename on
-set -g @rose_pine_variant 'moon'
 
-set -g @rose_pine_date_time '%d-%m-%Y'
+set -ag terminal-overrides ",xterm-256color:RGB"
 
-# # Customize key bindings
-bind-key R source-file ~/.config/tmux/tmux.conf \; display-message "tmux configuration reloaded"
+# Custom key bindings
+bind-key R source-file ~/.config/tmux/tmux.conf \; display-message "Tmux configuration reloaded"
 bind -n C-k send-keys -R \; clear-history
 
 run '~/.config/tmux/plugins/tpm/tpm'
