Update .config/i3/config.d/autostart.conf Update .config/i3/config.d/keymaps.conf

--- a/dot_config/i3/config.d/autostart.conf
+++ b/dot_config/i3/config.d/autostart.conf
@@ -30,5 +30,5 @@ exec_always --no-startup-id picom -b --experimental-backends
 # https://wiki.archlinux.org/title/Session_lock#xautolock
 # exec --no-startup-id xautolock -time 60 -locker "systemctl suspend"
 
-# autotiling script
+# kdeconnect
 exec_always --no-startup-id kdeconnect-indicator
