--- a/dot_config/i3/config.d/keymaps.conf
+++ b/dot_config/i3/config.d/keymaps.conf
@@ -143,6 +143,9 @@ set $volume_up $(pactl set-sink-volume @DEFAULT_SINK@ +2% && $sink_volume)
 
     # frequent clipboard
     bindsym $mod+s exec ~/.local/bin/scripts/frequently-used-rofi.sh
+
+    # localhosts
+    bindsym $mod+i exec ~/.local/bin/scripts/localhost.sh
 #
 # volume control
 #
