--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -3,6 +3,9 @@ set -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
+set-window-option -g status-keys vi
+set-window-option -g mode-keys vi
+
 set-option -g detach-on-destroy off
 set-option -g base-index 1
 set-option -g set-titles on
@@ -13,5 +16,9 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 # Custom key bindings
 bind-key R source-file ~/.config/tmux/tmux.conf \; display-message "Tmux configuration reloaded"
 bind -n C-k send-keys -R \; clear-history
+bind '%' split-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 run '~/.config/tmux/plugins/tpm/tpm'
