Update .config/i3/config.d/keymaps.conf Update .config/nvim/lazy-lock.json Update .config/polybar/config.ini Update .config/mimeapps.list

--- a/dot_config/i3/config.d/keymaps.conf
+++ b/dot_config/i3/config.d/keymaps.conf
@@ -31,7 +31,7 @@ set $volume_up $(pactl set-sink-volume @DEFAULT_SINK@ +2% && $sink_volume)
     # if you want to exec tmux along with alacritty
     # bindsym $mod+Return exec alacritty -e tmux
 
-    bindsym $mod+w exec microsoft-edge-stable
+    bindsym $mod+w exec microsoft-edge-dev
     bindsym $mod+n exec thunar
     bindsym Print exec --no-startup-id flameshot gui
     bindsym $mod+Control+l exec --no-startup-id i3lock -f -p default -e -i ~/wallpapers/wallhaven-ex7l5w_1920x1080.png
