--- a/dot_config/polybar/config.ini
+++ b/dot_config/polybar/config.ini
@@ -134,7 +134,7 @@ date = %H:%M:%S %d-%m %a
 date-alt = %H:%M %a
 format-prefix-foreground = ${colors.overlay}
 format-prefix = "  "
-label = %{A2:alacritty --hold -e cal -3:}%{A3:microsoft-edge-stable "https\://calendar.google.com/calendar/u/1/r":}%date%%{A}%{A}
+label = %{A2:alacritty --hold -e cal -3:}%{A3:microsoft-edge-dev "https\://calendar.google.com/calendar/u/1/r":}%date%%{A}%{A}
 
 [module/filesystem]
 type = internal/fs
@@ -172,4 +172,4 @@ label-urgent-padding = 1
 type = custom/script
 exec = ~/.local/bin/scripts/cms.sh
 interval = 900
-click-right=microsoft-edge-stable "https://cms.bits-hyderabad.ac.in/message/output/popup/notifications.php"
+click-right=microsoft-edge-dev "https://cms.bits-hyderabad.ac.in/message/output/popup/notifications.php"
