Update .config/nvim/lazy-lock.json Update .config/nvim/lua/plugins/plugins.lua Update .config/polybar/config.ini Add .config/vanilla-nvim/backup.init.vim Add .config/vanilla-nvim/doc/kickstart.txt Add .config/vanilla-nvim/doc/tags Update .config/vanilla-nvim/lazy-lock.json

--- a/dot_config/polybar/config.ini
+++ b/dot_config/polybar/config.ini
@@ -113,8 +113,8 @@ format-prefix-foreground = ${colors.overlay}
 format-prefix = "󰃠 "
 format = <label>
 
-; Read wiki again
-; enable-scroll = true
+interval = 2
+enable-scroll = true
 
 [module/temperature]
 type = internal/temperature
