--- a/dot_config/polybar/config.ini
+++ b/dot_config/polybar/config.ini
@@ -172,4 +172,5 @@ label-urgent-padding = 1
 type = custom/script
 exec = ~/.local/bin/scripts/cms.sh
 interval = 900
+click-left=microsoft-edge-dev "https://cms.bits-hyderabad.ac.in/my/"
 click-right=microsoft-edge-dev "https://cms.bits-hyderabad.ac.in/message/output/popup/notifications.php"
