--- a/dot_config/i3/config.d/keymaps.conf
+++ b/dot_config/i3/config.d/keymaps.conf
@@ -146,6 +146,9 @@ set $volume_up $(pactl set-sink-volume @DEFAULT_SINK@ +2% && $sink_volume)
 
     # localhosts
     bindsym $mod+i exec ~/.local/bin/scripts/localhost.sh
+
+    # ssh
+    bindsym $mod+Shift+s exec rofi -show ssh
 #
 # volume control
 #
