--- a/dot_config/i3/config.d/keymaps.conf
+++ b/dot_config/i3/config.d/keymaps.conf
@@ -149,6 +149,9 @@ set $volume_up $(pactl set-sink-volume @DEFAULT_SINK@ +2% && $sink_volume)
 
     # ssh
     bindsym $mod+Shift+s exec rofi -show ssh
+
+    # calc
+    bindsym $mod+Shift+c exec rofi -show calc -terse
 #
 # volume control
 #
