--- a/dot_config/i3/config.d/keymaps.conf
+++ b/dot_config/i3/config.d/keymaps.conf
@@ -152,6 +152,9 @@ set $volume_up $(pactl set-sink-volume @DEFAULT_SINK@ +2% && $sink_volume)
 
     # calc
     bindsym $mod+Shift+c exec rofi -show calc -terse
+
+    # emoji
+    bindsym $mod+comma exec rofimoji -f math emojis
 #
 # volume control
 #
