--- a/dot_config/i3/config.d/application_defaults.conf
+++ b/dot_config/i3/config.d/application_defaults.conf
@@ -14,6 +14,9 @@ for_window [class="Thunar"] focus
 assign [class="Code"] 1
 for_window [class="Code"] focus
 
+assign [class="jetbrains-idea"] 1
+for_window [class="jetbrains-idea"] focus
+
 assign [class="discord"] 4
 
 # set floating (nontiling) for apps needing it
