--- a/dot_config/i3/config.d/application_defaults.conf
+++ b/dot_config/i3/config.d/application_defaults.conf
@@ -17,6 +17,11 @@ for_window [class="Code"] focus
 assign [class="jetbrains-idea"] 1
 for_window [class="jetbrains-idea"] focus
 
+assign [class="Thorium-browser"] 2
+for_window [class="Thorium-browser"] focus
+
+assign [class="thunderbird"] 3
+
 assign [class="discord"] 4
 
 # set floating (nontiling) for apps needing it
