--- a/dot_config/executable_greenclip.toml
+++ b/dot_config/executable_greenclip.toml
@@ -1,10 +1,10 @@
 [greenclip]
-  blacklisted_applications = []
-  enable_image_support = true
-  history_file = "/home/hans/.config/greenclip/greenclip.history"
-  image_cache_directory = "/tmp/greenclip"
-  max_history_length = 5000
-  max_selection_size_bytes = 0
-  static_history = ["f20210264@hyderabad.bits-pilani.ac.in"]
-  trim_space_from_selection = true
-  use_primary_selection_as_input = false
+blacklisted_applications = []
+enable_image_support = true
+history_file = "/home/hans/.config/greenclip/greenclip.history"
+image_cache_directory = "/tmp/greenclip"
+max_history_length = 5000
+max_selection_size_bytes = 0
+static_history = []
+trim_space_from_selection = true
+use_primary_selection_as_input = false
