--- a/dot_config/polybar/config.ini
+++ b/dot_config/polybar/config.ini
@@ -27,15 +27,20 @@ separator-foreground = ${colors.separator}
 
 modules-left = i3
 modules-center = filesystem temperature memory cpu backlight battery date pulseaudio cms
+modules-right = tray
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
 font-0 = "JetBrainsMono Nerd Font:size=13.4;2"
 
-tray-position = right
+[module/tray]
+type = internal/tray
+
 tray-background = ${colors.background}
-tray-maxsize = 20
+tray-size = 66%
+tray-spacing = 2px
+
 
 [module/pulseaudio]
 type = internal/pulseaudio
