--- a/dot_config/i3/config.d/keymaps.conf
+++ b/dot_config/i3/config.d/keymaps.conf
@@ -147,14 +147,14 @@ set $volume_up $(pactl set-sink-volume @DEFAULT_SINK@ +2% && $sink_volume)
     # localhosts
     bindsym $mod+i exec ~/.local/bin/scripts/localhost.sh
 
-    # ssh
-    bindsym $mod+Shift+s exec rofi -show ssh
-
     # calc
     bindsym $mod+Shift+c exec rofi -show calc -terse
 
     # emoji
     bindsym $mod+comma exec rofimoji -f math emojis
+
+    # sessions
+    bindsym $mod+Shift+s exec ~/.local/bin/scripts/workspaces.sh
 #
 # volume control
 #
