--- a/dot_config/i3/config.d/autostart.conf
+++ b/dot_config/i3/config.d/autostart.conf
@@ -4,7 +4,7 @@ exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec_always --no-startup-id feh --no-fehbg --bg-fill ~/Pictures/wallpapers/wallhaven-4dp2g4_1920x1080.png
 
 # autotiling script
-exec_always --no-startup-id autotiling
+# exec_always --no-startup-id autotiling
 
 # get auth work with polkit-gnome
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -24,7 +24,7 @@ exec --no-startup-id dbus-launch dunst --config ~/.config/dunst/dunstrc
 exec --no-startup-id xset s 480 dpms 600 600 600
 
 # compositor
-exec_always --no-startup-id picom -b --experimental-backends
+exec_always --no-startup-id picom -b
 
 # use xautolock to use autosuspend rules for mobile devices
 # https://wiki.archlinux.org/title/Session_lock#xautolock
