--- a/dot_config/i3/config.d/application_defaults.conf
+++ b/dot_config/i3/config.d/application_defaults.conf
@@ -11,14 +11,13 @@ for_window [class="Microsoft-edge"] focus
 assign [class="Thunar"] 3
 for_window [class="Thunar"] focus
 
+assign [class="Evince"] 3
+
 assign [class="Code"] 1
 for_window [class="Code"] focus
 
 assign [class="jetbrains-idea"] 1
 for_window [class="jetbrains-idea"] focus
-
-assign [class="Thorium-browser"] 2
-for_window [class="Thorium-browser"] focus
 
 assign [class="thunderbird"] 3
 
