Update .config/polybar/config.ini Update .config/zsh/.zshrc Change attributes of .config/mimeapps.list

--- a/dot_config/polybar/config.ini
+++ b/dot_config/polybar/config.ini
@@ -26,7 +26,7 @@ separator = |
 separator-foreground = ${colors.separator}
 
 modules-left = i3
-modules-center = filesystem temperature memory cpu backlight battery date pulseaudio cms
+modules-center = filesystem temperature memory cpu backlight battery date pulseaudio
 modules-right = tray
 
 background = ${colors.background}
@@ -139,7 +139,7 @@ date = %H:%M:%S %d-%m %a
 date-alt = %H:%M %a
 format-prefix-foreground = ${colors.overlay}
 format-prefix = "  "
-label = %{A2:alacritty --hold -e cal -3:}%{A3:microsoft-edge-dev "https\://calendar.google.com/calendar/u/1/r":}%date%%{A}%{A}
+label = %{A2:alacritty --hold -e cal -3:}%{A3:microsoft-edge-stable "https\://calendar.google.com/calendar/u/1/r":}%date%%{A}%{A}
 
 [module/filesystem]
 type = internal/fs
@@ -177,5 +177,5 @@ label-urgent-padding = 1
 type = custom/script
 exec = ~/.local/bin/scripts/cms.sh
 interval = 300
-click-left=microsoft-edge-dev "https://cms.bits-hyderabad.ac.in/my/"
-click-right=microsoft-edge-dev "https://cms.bits-hyderabad.ac.in/message/output/popup/notifications.php"
+click-left=microsoft-edge-stable "https://cms.bits-hyderabad.ac.in/my/"
+click-right=microsoft-edge-stable "https://cms.bits-hyderabad.ac.in/message/output/popup/notifications.php"
