--- a/dot_config/i3/config.d/keymaps.conf
+++ b/dot_config/i3/config.d/keymaps.conf
@@ -34,7 +34,7 @@ set $volume_up $(pactl set-sink-volume @DEFAULT_SINK@ +2% && $sink_volume)
     bindsym $mod+w exec microsoft-edge-stable
     bindsym $mod+n exec thunar
     bindsym Print exec --no-startup-id flameshot gui -d 500
-    bindsym $mod+Control+l exec --no-startup-id i3lock -f -p default -e -i ~/Pictures/wallpapers/wallhaven-jxegg5_1920x1080.png
+    bindsym $mod+Control+l exec --no-startup-id ~/.config/i3/scripts/i3-lock-rand
     bindsym XF86Calculator exec discord
 
     # toggle polybar
