--- a/dot_config/polybar/config.ini
+++ b/dot_config/polybar/config.ini
@@ -111,7 +111,7 @@ animation-charging-framerate = 500
 [module/backlight]
 type = internal/backlight
 
-card = amdgpu_bl1
+card = amdgpu_bl2
 use-actual-brightness = true
 
 format-prefix-foreground = ${colors.overlay}
@@ -139,7 +139,7 @@ date = %H:%M:%S %d-%m %a
 date-alt = %H:%M %a
 format-prefix-foreground = ${colors.overlay}
 format-prefix = "  "
-label = %{A2:alacritty --hold -e cal -3:}%{A3:microsoft-edge-stable "https\://calendar.google.com/calendar/u/1/r":}%date%%{A}%{A}
+label = %{A2:alacritty --hold -e cal -3:}%{A3:microsoft-edge-stable "https\\://calendar.google.com/calendar/u/1/r":}%date%%{A}%{A}
 
 [module/filesystem]
 type = internal/fs
