--- a/dot_config/alacritty/private_alacritty.toml
+++ b/dot_config/alacritty/private_alacritty.toml
@@ -1,4 +1,3 @@
-import = ["/home/hans/.config/alacritty/rose-pine.toml"]
 
 [env]
 TERM = "xterm-256color"
@@ -177,4 +176,7 @@ save_to_clipboard = false
 semantic_escape_chars = ",│`|:\"' ()[]{}<>\t"
 
 [window]
-opacity = 0.95
+opacity = 1
+
+[general]
+import = ["/home/hans/.config/alacritty/rose-pine.toml"]
