--- a/dot_config/i3/config.d/keymaps.conf
+++ b/dot_config/i3/config.d/keymaps.conf
@@ -155,6 +155,9 @@ set $volume_up $(pactl set-sink-volume @DEFAULT_SINK@ +2% && $sink_volume)
 
     # sessions
     bindsym $mod+Shift+s exec ~/.local/bin/scripts/workspaces.sh
+
+    # thunar bookmarks
+    bindsym $mod+Shift+n exec ~/.local/bin/scripts/thunar-bookmarks.sh
 #
 # volume control
 #
