Update .config/nvim/lazy-lock.json Update .config/nvim/lazyvim.json Update .config/nvim/lua/config/keymaps.lua Update .config/nvim/lua/config/options.lua Update .config/nvim/lua/plugins/plugins.lua Update .config/yt-dlp/config

--- a/dot_config/yt-dlp/config
+++ b/dot_config/yt-dlp/config
@@ -1,3 +1,4 @@
+--restrict-filenames
 -o '~/Videos/ytdlp/%(playlist)s/%(playlist_index)s - %(title)s.%(ext)s'
 
 -f 'bestvideo[height<=480]+bestaudio/best[height<=480]'
